[package]
authors = ["Jesper Håkansson <jesper@jesperh.se>"]
name = "database-manager"
version = "0.1.0"
[dependencies]
error-chain = "0.10.0"
error_derive = "0.2.0"
postgres = "0.15.1"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rocket_contrib = "0.3.2"
serde = "1.0.14"
serde_derive = "1.0.14"
serde_json = "1.0.3"
stdweb = "0.1.1"
