[package]
authors = ["Jesper Håkansson <jesper@jesperh.se>"]
name = "database-manager"
version = "0.1.0"
[dependencies]
error-chain = "0.10.0"
error_derive = "0.2.0"
postgres = "0.15.1"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
serde = "1.0.14"
serde_derive = "1.0.14"
serde_json = "1.0.3"
actix = "0.5"
actix-web = "0.5"
futures = "0.1"
env_logger = "0.5.9"
juniper = "0.9.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.5.1"
